# rust-godot-voxel-flight-game

./: .gitignore
godot/: export_presets.cfg  icon.svg.import  project.godot  rust_template_exten.gdextension
godot/demo/: demo.tscn  demo_script.gd
godot/game/materials/: cube_mat.gdshader  cube_mat.tres  gradient_1.tres  gradient_2.tres  gradient_3.tres  particles_alpha.tres
godot/game/scenes/: A_Player.tscn  Cube.tscn  FX_Explosion.tscn  W_Main.tscn  a_player.gd
godot/game/scripts/: debug_info.gd  load_progress_bar.gd  one_shot_emit.gd  score_label.gd
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: cube_spawner.rs  demo.rs  lib.rs  player.rs  player_cam.rs
